crates/pg_syntax/tests/snapshots/postgres_regress/json@121.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{\"a\": \"c\", \"b\": null}'::json -> 'b';"
---
SelectStmt@0..44
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..43
    AExpr@7..43
      TypeCast@7..36
        AConst@7..30
          Sconst@7..30 "'{\"a\": \"c\", \"b\": null}'"
        Typecast@30..32 "::"
        TypeName@32..36
          Ident@32..36 "json"
      Whitespace@36..37 " "
      Op@37..39 "->"
      Whitespace@39..40 " "
      AConst@40..43
        Sconst@40..43 "'b'"
  Ascii59@43..44 ";"

