crates/pg_syntax/tests/snapshots/postgres_regress/json@124.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{\"a\": [{\"b\": \"c\"}, {\"b\": \"cc\"}]}'::json ->> null::text;"
---
SelectStmt@0..63
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..62
    AExpr@7..62
      TypeCast@7..47
        AConst@7..41
          Sconst@7..41 "'{\"a\": [{\"b\": \"c\"}, { ..."
        Typecast@41..43 "::"
        TypeName@43..47
          Ident@43..47 "json"
      Whitespace@47..48 " "
      Op@48..51 "->>"
      Whitespace@51..52 " "
      TypeCast@52..62
        AConst@52..56
          NullP@52..56 "null"
        Typecast@56..58 "::"
        TypeName@58..62
          TextP@58..62 "text"
  Ascii59@62..63 ";"

