crates/pg_syntax/tests/snapshots/postgres_regress/json@129.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '[{\"b\": \"c\"}, {\"b\": \"cc\"}]'::json ->> 1;"
---
SelectStmt@0..47
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..46
    AExpr@7..46
      TypeCast@7..40
        AConst@7..34
          Sconst@7..34 "'[{\"b\": \"c\"}, {\"b\": \" ..."
        Typecast@34..36 "::"
        TypeName@36..40
          Ident@36..40 "json"
      Whitespace@40..41 " "
      Op@41..44 "->>"
      Whitespace@44..45 " "
      AConst@45..46
        Iconst@45..46 "1"
  Ascii59@46..47 ";"

