crates/pg_syntax/tests/snapshots/postgres_regress/json@131.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '[{\"b\": \"c\"}, {\"b\": \"cc\"}]'::json ->> 'z';"
---
SelectStmt@0..49
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..48
    AExpr@7..48
      TypeCast@7..40
        AConst@7..34
          Sconst@7..34 "'[{\"b\": \"c\"}, {\"b\": \" ..."
        Typecast@34..36 "::"
        TypeName@36..40
          Ident@36..40 "json"
      Whitespace@40..41 " "
      Op@41..44 "->>"
      Whitespace@44..45 " "
      AConst@45..48
        Sconst@45..48 "'z'"
  Ascii59@48..49 ";"

